Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjObject.quorum
class Main
    action Main
        Object v
        v:SetValue()
        Test(v)
    end

    action Test(Boolean var)
    end
end
